--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -58,14 +60,16 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+            flex-wrap: wrap;
         }
         .summary-text {
             flex: 1;
-            max-width: 33%;
+            max-width: 100%;
+            margin-bottom: 10px;
         }
         .chart-container {
-            flex: 2;
-            max-width: 67%;
+            flex: 1;
+            max-width: 100%;
             display: flex;
             justify-content: center;
         }
@@ -77,7 +81,7 @@
             color: #007BFF;
         }
         .gradient-text {
-            font-size: 3rem;
+            font-size: 2.5rem;
             font-weight: bold;
             text-align: center;
             background: linear-gradient(to right, #007BFF, #0056b3);
@@ -99,6 +103,24 @@
         .expenses-table td, .expenses-table th {
             padding: 12px;
             text-align: center;
+        }
+
+        /* Media Queries for Mobile */
+        @media (max-width: 576px) {
+            .summary-card {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+            .summary-text, .chart-container {
+                max-width: 100%;
+                margin-bottom: 10px;
+            }
+            .card-title {
+                font-size: 1.25rem;
+            }
+            .gradient-text {
+                font-size: 2rem;
+            }
         }
     </style>
 </head>
@@ -129,8 +151,8 @@
                 <div class="card mb-4">
                     <div class="card-header">
                         <h3 class="card-title text-center mb-0">
-                            <button class="btn btn-link text-decoration-none text-white" data-bs-toggle="collapse" data-bs-target="#addExpenseCollapse" aria-expanded="false" aria-controls="addExpenseCollapse">
-                                Add New Expense
+                            <button class="btn btn-link text-decoration-none text-white" data-bs-toggle="collapse" data-bs-target="#addExpenseCollapse" aria-expanded="false" aria-controls="addExpenseCollapse" id="toggleExpenseButton">
+                                Add New Expense <i class="fas fa-chevron-down toggle-icon"></i>
                             </button>
                         </h3>
                     </div>
@@ -139,26 +161,36 @@
                             <form>
                                 <div class="row mb-3">
                                     <div class="col-md-6">
-                                        <label for="newItem" class="form-label">Item</label>
-                                        <input type="text" id="newItem" class="form-control" placeholder="e.g., Internet Bill" required>
+                                        <label for="newItem" class="form-label" data-bs-toggle="tooltip" data-bs-placement="top" title="Enter the name of the expense.">Expense Item <span class="text-danger">*</span></label>
+                                        <input type="text" id="newItem" class="form-control" placeholder="e.g., Coffee Subscription" required>
                                     </div>
                                     <div class="col-md-6">
-                                        <label for="newAmount" class="form-label">Amount</label>
-                                        <input type="number" id="newAmount" class="form-control" placeholder="e.g., 100" required>
+                                        <label for="newAmount" class="form-label" data-bs-toggle="tooltip" data-bs-placement="top" title="Enter the amount in dollars.">Amount ($) <span class="text-danger">*</span></label>
+                                        <input type="number" id="newAmount" class="form-control" placeholder="e.g., 9.99" required>
                                     </div>
                                 </div>
                                 <div class="row mb-3">
                                     <div class="col-md-6">
-                                        <label for="newDueDate" class="form-label">Due Date</label>
+                                        <label for="newDueDate" class="form-label" data-bs-toggle="tooltip" data-bs-placement="top" title="Select the due date for the expense.">Due Date <span class="text-danger">*</span></label>
                                         <input type="date" id="newDueDate" class="form-control" required>
                                     </div>
                                     <div class="col-md-6">
-                                        <label for="newCategory" class="form-label">Category</label>
+                                        <label for="newCategory" class="form-label" data-bs-toggle="tooltip" data-bs-placement="top" title="Choose a category for the expense.">Category <span class="text-danger">*</span></label>
                                         <select id="newCategory" class="form-select">
                                             <option value="Bills">Bills</option>
                                             <option value="Savings">Savings</option>
                                             <option value="Personal Expenses">Personal Expenses</option>
                                             <option value="Other">Other</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="row mb-3">
+                                    <div class="col-md-6">
+                                        <label for="newFrequency" class="form-label" data-bs-toggle="tooltip" data-bs-placement="top" title="Select how often this expense occurs.">Frequency <span class="text-danger">*</span></label>
+                                        <select id="newFrequency" class="form-select">
+                                            <option value="Weekly">Weekly</option>
+                                            <option value="Bi-Weekly">Bi-Weekly</option>
+                                            <option value="Monthly">Monthly</option>
                                         </select>
                                     </div>
                                 </div>
@@ -176,8 +208,8 @@
                 <div class="update-income-card card">
                     <div class="card-header">
                         <h3 class="card-title text-center mb-0">
-                            <button class="btn btn-link text-decoration-none text-white" data-bs-toggle="collapse" data-bs-target="#updateIncomeCollapse" aria-expanded="false" aria-controls="updateIncomeCollapse">
-                                Update Monthly Income
+                            <button class="btn btn-link text-decoration-none text-white" data-bs-toggle="collapse" data-bs-target="#updateIncomeCollapse" aria-expanded="false" aria-controls="updateIncomeCollapse" id="toggleIncomeButton">
+                                Update Monthly Income <i class="fas fa-chevron-down toggle-icon"></i>
                             </button>
                         </h3>
                     </div>
@@ -208,6 +240,7 @@
                             <th>Category</th>
                             <th>Amount</th>
                             <th>Due Date</th>
+                            <th>Frequency</th>
                             <th>Paid</th>
                             <th>Action</th>
                             <th>Skip</th>
@@ -272,11 +305,17 @@
             const currentData = dataByMonth[currentMonthIndex];
             currentData.expenses.forEach((expense, idx) => {
                 const row = document.createElement("tr");
+                
+                // Extract the day of the month from the due date
+                const dueDate = new Date(expense.dueDate);
+                const dayOfMonth = dueDate.getDate(); // Get the day of the month
+
                 row.innerHTML = `
                     <td>${expense.item}</td>
                     <td>${expense.category}</td>
                     <td>$${expense.amount.toFixed(2)}</td>
-                    <td>${new Date(expense.startDate).getDate()}</td>
+                    <td>${dayOfMonth}</td>
+                    <td>${expense.frequency}</td>
                     <td><input type="checkbox" ${expense.paid ? "checked" : ""} onclick="togglePaid(${idx})"></td>
                     <td><button class="btn btn-danger btn-sm" onclick="deleteExpense(${idx})">Delete</button></td>
                     <td><input type="checkbox" ${expense.skipped ? "checked" : ""} onclick="toggleSkip(${idx})"></td>
@@ -295,13 +334,14 @@
             const amount = parseFloat(document.getElementById("newAmount").value);
             const dueDate = document.getElementById("newDueDate").value;
             const category = document.getElementById("newCategory").value;
+            const frequency = document.getElementById("newFrequency").value;
 
-            if (!item || isNaN(amount) || !dueDate || !category) {
+            if (!item || isNaN(amount) || !dueDate || !category || !frequency) {
                 alert("Please fill out all fields!");
                 return;
             }
 
-            const newExpense = { item, amount, dueDate, category, paid: false, skipped: false };
+            const newExpense = { item, amount, dueDate, category, frequency, paid: false, skipped: false };
             dataByMonth[currentMonthIndex].expenses.push(newExpense);
 
             // Carry expenses to future months
@@ -356,7 +396,48 @@
         // Update summary
         function updateSummary() {
             const currentData = dataByMonth[currentMonthIndex];
-            const totalExpenses = currentData.expenses.reduce((sum, expense) => sum + (expense.skipped ? 0 : expense.amount), 0);
+            const year = new Date().getFullYear();
+            const month = currentMonthIndex; // 0-indexed month
+            const daysInMonth = new Date(year, month + 1, 0).getDate(); // Get the number of days in the current month
+
+            const totalExpenses = currentData.expenses.reduce((sum, expense) => {
+                if (expense.skipped) return sum;
+
+                let expenseAmount = expense.amount;
+                const dueDate = new Date(expense.dueDate);
+                const startDay = dueDate.getDate();
+
+                switch (expense.frequency) {
+                    case 'Weekly':
+                        if (currentMonthIndex === dueDate.getMonth()) {
+                            // First month: calculate from the start day
+                            const weeksInMonth = Math.floor((daysInMonth - startDay) / 7) + 1;
+                            expenseAmount *= weeksInMonth;
+                        } else {
+                            // Subsequent months: calculate full weeks
+                            const fullWeeksInMonth = Math.floor(daysInMonth / 7);
+                            expenseAmount *= fullWeeksInMonth;
+                        }
+                        break;
+                    case 'Bi-Weekly':
+                        if (currentMonthIndex === dueDate.getMonth()) {
+                            // First month: calculate from the start day
+                            const biWeeksInMonth = Math.floor((daysInMonth - startDay) / 14) + 1;
+                            expenseAmount *= biWeeksInMonth;
+                        } else {
+                            // Subsequent months: calculate full bi-weekly periods
+                            const fullBiWeeksInMonth = Math.floor(daysInMonth / 14);
+                            expenseAmount *= fullBiWeeksInMonth;
+                        }
+                        break;
+                    case 'Monthly':
+                        // No change needed for monthly
+                        break;
+                }
+
+                return sum + expenseAmount;
+            }, 0);
+
             const totalPaid = currentData.expenses.reduce((sum, expense) => sum + (expense.paid ? expense.amount : 0), 0);
             const remainingBalance = currentData.income - totalExpenses;
 
@@ -447,6 +528,52 @@
         renderMonthNavbar();
         renderExpensesTable();
         updateSummary();
+
+        // Toggle button text and icon
+        document.querySelectorAll('[data-bs-toggle="collapse"]').forEach(button => {
+            button.addEventListener('click', function() {
+                const icon = this.querySelector('.toggle-icon');
+                const isExpanded = this.getAttribute('aria-expanded') === 'true';
+
+                if (isExpanded) {
+                    icon.classList.remove('fa-chevron-up');
+                    icon.classList.add('fa-chevron-down');
+                } else {
+                    icon.classList.remove('fa-chevron-down');
+                    icon.classList.add('fa-chevron-up');
+                }
+            });
+        });
+
+        document.addEventListener('DOMContentLoaded', () => {
+            // Prefill the due date with today's date
+            const today = new Date().toISOString().split('T')[0];
+            document.getElementById('newDueDate').value = today;
+
+            // Initialize Bootstrap tooltips
+            const tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+            tooltipTriggerList.map(function (tooltipTriggerEl) {
+                return new bootstrap.Tooltip(tooltipTriggerEl);
+            });
+
+            // Format amount input as currency
+            const amountInput = document.getElementById('newAmount');
+            amountInput.addEventListener('blur', () => {
+                const value = parseFloat(amountInput.value);
+                if (!isNaN(value)) {
+                    amountInput.value = value.toFixed(2);
+                }
+            });
+
+            // Format income input as currency
+            const incomeInput = document.getElementById('incomeInput');
+            incomeInput.addEventListener('blur', () => {
+                const value = parseFloat(incomeInput.value);
+                if (!isNaN(value)) {
+                    incomeInput.value = value.toFixed(2);
+                }
+            });
+        });
     </script>
 </body>
 </html>
