--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="twitter:image" content=""> <!-- Replace with the URL to an image representing your app -->
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap JavaScript Bundle -->
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Chart.js Data Labels Plugin -->
@@ -406,33 +407,48 @@
             updateSummary();
         }
 
-        // Render expenses table
-        function renderExpensesTable() {
-            const tableBody = document.getElementById("expensesTable");
-            tableBody.innerHTML = "";
+       // Render expenses table
+    function renderExpensesTable() {
+        const tableBody = document.getElementById("expensesTable");
+        tableBody.innerHTML = "";
 
-            const currentData = dataByMonth[currentMonthIndex];
-            currentData.expenses.forEach((expense, idx) => {
-                const row = document.createElement("tr");
-                const dueDate = new Date(expense.dueDate);
-                const dayOfMonth = dueDate.getDate();
+        const currentData = dataByMonth[currentMonthIndex];
+        currentData.expenses.forEach((expense, idx) => {
+            const row = document.createElement("tr");
+            const dueDate = new Date(expense.dueDate);
+            const dayOfMonth = dueDate.getDate();
 
-                row.innerHTML = `
-                    <td>${expense.item}</td>
-                    <td>${expense.category}</td>
-                    <td>$${expense.amount.toFixed(2)}</td>
-                    <td>${dayOfMonth}</td>
-                    <td>${expense.frequency}</td>
-                    <td><input type="checkbox" ${expense.paid ? "checked" : ""} onclick="togglePaid(${idx})"></td>
-                    <td><button class="btn btn-danger btn-sm" onclick="deleteExpense(${idx})">Delete</button></td>
-                    <td><input type="checkbox" ${expense.skipped ? "checked" : ""} onclick="toggleSkip(${idx})"></td>
-                `;
-                if (expense.paid) {
-                    row.classList.add("highlight-row");
-                }
-                tableBody.appendChild(row);
-            });
+            row.innerHTML = `
+                <td>${expense.item}</td>
+                <td>${expense.category}</td>
+                <td>$${expense.amount.toFixed(2)}</td>
+                <td>${dayOfMonth}</td>
+                <td>${expense.frequency}</td>
+                <td><input type="checkbox" ${expense.paid ? "checked" : ""} onclick="togglePaid(${idx})"></td>
+                <td><button class="btn btn-danger btn-sm" onclick="confirmAndDeleteExpense(${idx})">Delete</button></td>
+                <td><input type="checkbox" ${expense.skipped ? "checked" : ""} onclick="toggleSkip(${idx})"></td>
+            `;
+            if (expense.paid) {
+                row.classList.add("highlight-row");
+            }
+            tableBody.appendChild(row);
+        });
+    }
+
+    // Function to confirm before deleting an expense
+    function confirmAndDeleteExpense(index) {
+        const isConfirmed = confirm("Are you sure you want to delete this expense?");
+        if (isConfirmed) {
+            deleteExpense(index);
         }
+    }
+
+    // Existing function to handle the actual deletion
+    function deleteExpense(index) {
+        dataByMonth[currentMonthIndex].expenses.splice(index, 1);
+        renderExpensesTable(); // Re-render the table after deletion
+    }
+
 
         // Add new expense
         document.getElementById("addExpenseButton").onclick = (e) => {
@@ -512,22 +528,37 @@
             saveData();
         }
 
-        // Render income sources
-        function renderIncomeSources() {
-            const incomeSourceList = document.getElementById("incomeSourceList");
-            incomeSourceList.innerHTML = "";
+            // Render income sources
+    function renderIncomeSources() {
+        const incomeSourceList = document.getElementById("incomeSourceList");
+        incomeSourceList.innerHTML = "";
 
-            const currentData = dataByMonth[currentMonthIndex];
-            currentData.incomeSources.forEach((source, idx) => {
-                const listItem = document.createElement("li");
-                listItem.className = "list-group-item d-flex justify-content-between align-items-center";
-                listItem.innerHTML = `
-                    ${source.name}: $${source.amount.toFixed(2)}
-                    <button class="btn btn-danger btn-sm" onclick="removeIncomeSource(${idx})">Remove</button>
-                `;
-                incomeSourceList.appendChild(listItem);
-            });
+        const currentData = dataByMonth[currentMonthIndex];
+        currentData.incomeSources.forEach((source, idx) => {
+            const listItem = document.createElement("li");
+            listItem.className = "list-group-item d-flex justify-content-between align-items-center";
+            listItem.innerHTML = `
+                ${source.name}: $${source.amount.toFixed(2)}
+                <button class="btn btn-danger btn-sm" onclick="confirmAndRemoveIncomeSource(${idx})">Remove</button>
+            `;
+            incomeSourceList.appendChild(listItem);
+        });
+    }
+
+    // Function to confirm before removing an income source
+    function confirmAndRemoveIncomeSource(index) {
+        const isConfirmed = confirm("Are you sure you want to delete this income source?");
+        if (isConfirmed) {
+            removeIncomeSource(index);
         }
+    }
+
+    // Existing function to handle the actual removal
+    function removeIncomeSource(index) {
+        dataByMonth[currentMonthIndex].incomeSources.splice(index, 1);
+        renderIncomeSources(); // Re-render the list after removal
+    }
+
 
         // Add new income source
         document.getElementById("incomeSourceForm").onsubmit = (e) => {
@@ -694,5 +725,72 @@
             });
         });
     </script>
+
+    <!-- Success Modal -->
+<div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="successModalLabel">Success</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Expense added successfully!
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const expenseForm = document.querySelector("#addExpenseCollapse form");
+        const addExpenseButton = document.getElementById("addExpenseButton");
+
+        // Add event listener for adding an expense
+        addExpenseButton.addEventListener("click", function (event) {
+            event.preventDefault();
+
+            // Retrieve form values
+            const newItem = document.getElementById("newItem").value.trim();
+            const newAmount = parseFloat(document.getElementById("newAmount").value);
+            const newDueDate = document.getElementById("newDueDate").value.trim();
+            const newCategory = document.getElementById("newCategory").value;
+            const newFrequency = document.getElementById("newFrequency").value;
+
+            // Validate form inputs
+            if (!newItem || isNaN(newAmount) || !newDueDate || !newCategory || !newFrequency) {
+                alert("Please fill in all required fields.");
+                return;
+            }
+
+            // Add expense to the data structure
+            const newExpense = {
+                item: newItem,
+                amount: newAmount,
+                dueDate: newDueDate,
+                category: newCategory,
+                frequency: newFrequency,
+                paid: false,
+                skipped: false,
+            };
+
+            dataByMonth[currentMonthIndex].expenses.push(newExpense);
+            renderExpensesTable();
+            updateSummary();
+            saveData();
+
+            // Show the success modal
+            const successModal = new bootstrap.Modal(document.getElementById("successModal"));
+            successModal.show();
+
+            // Reset the form after submission
+            expenseForm.reset();
+        });
+    });
+</script>
+
 </body>
 </html>
